--- a/localsite/templates/rest_framework/base.html
+++ b/localsite/templates/rest_framework/base.html
@@ -3,7 +3,9 @@
     <head>
         {% block head %}
             {% block meta %}
-                <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+                <meta charset="utf-8">
+                <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta name="robots" content="NONE,NOARCHIVE" />
             {% endblock %}
             <title>{% block title %}{% if name %}{{ name }} –  {% endif %}Canadian Parliamentary Data API{% endblock %}</title>
@@ -11,11 +13,12 @@
                 <link rel="stylesheet" type="text/css" href="{% static "theme-application/css/toolkit.min.css" %}"/>
                 <style>
                     #description { padding: 0 15px 15px; }
-                    #response { margin-bottom: 15px; font-family: monospace; overflow: auto; }
+                    #response { margin-bottom: 15px; font-family: monospace; }
                     #response .panel-heading { font-weight: bold; }
-                    #response-content { white-space: pre; padding: 15px; }
-                    .container { background: rgba(255,255,255,0.9); }
+                    #response-content { white-space: pre; overflow: auto; padding: 15px; }
+                    .container { background: rgba(255,255,255,0.9); margin-bottom: 20px; }
                     .container, .breadcrumb { border-radius: 0 0 4px 4px; }
+                    .breadcrumb { background: rgba(255,255,255,0.5); }
                     .hljs { color: #ccc; }
                     .hljs-attr { color: #c33; }
                     .hljs-string, .hljs-number { color: #000; }
