True and false shouldn't be light grey

--- a/localsite/templates/rest_framework/base.html
+++ b/localsite/templates/rest_framework/base.html
@@ -21,7 +21,7 @@
                     .breadcrumb { background: rgba(255,255,255,0.5); }
                     .hljs { color: #ccc; }
                     .hljs-attr { color: #c33; }
-                    .hljs-string, .hljs-number { color: #000; }
+                    .hljs-string, .hljs-number, .hljs-literal { color: #000; }
                     .pagination { margin: 0 !important; }
                     body { background: url({% static "img/parliament-back.jpg" %}) center no-repeat; background-size: cover; background-attachment: fixed; }
                     nav { line-height: 1em; }
