--- a/localsite/templates/rest_framework/base.html
+++ b/localsite/templates/rest_framework/base.html
@@ -12,17 +12,18 @@
             {% block style %}
                 <link rel="stylesheet" type="text/css" href="{% static "theme-application/css/toolkit.min.css" %}"/>
                 <style>
-                    #description { padding: 0 15px 15px; }
+                    #description { margin-bottom: 20px; }
                     #response { margin-bottom: 15px; font-family: monospace; }
                     #response .panel-heading { font-weight: bold; }
                     #response-content { white-space: pre; overflow: auto; padding: 15px; }
                     .container { background: rgba(255,255,255,0.9); margin-bottom: 20px; }
                     .container, .breadcrumb { border-radius: 0 0 4px 4px; }
-                    .breadcrumb { background: rgba(255,255,255,0.5); }
+                    .breadcrumb { background: rgba(255,255,255,0.7); }
                     .hljs { color: #ccc; }
                     .hljs-attr { color: #c33; }
                     .hljs-string, .hljs-number, .hljs-literal { color: #000; }
                     .pagination { margin: 0 !important; }
+                    img { max-width: 100%; border-radius: 3px; border: 1px solid #d3e0e9; background: rgba(0,0,0,0.1); }
                     body { background: url({% static "img/parliament-back.jpg" %}) center no-repeat; background-size: cover; background-attachment: fixed; }
                     nav { line-height: 1em; }
                 </style>
